--- a/src/app/for-students/for-students.component.html
+++ b/src/app/for-students/for-students.component.html
@@ -1,4 +1,4 @@
-<div class="cont">
+<div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-md-12 text-center">
       <h3>Люблю свою работу</h3>
