--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -10,17 +10,27 @@
 </header>
 <div class="page-wrapper">
     <div class="row mb-3">
-        <div class="col-6 text-left">
+        <div class="col-3 text-left">
+            <label for="groupSelect">Выберите факультет</label>
+            <select class="form-control" id="facultySelect" [(ngModel)]="selectedFaculty" (change)="onFacultySelect()"
+                name="facultySelector" #facultySelect="ngModel">
+                <option selected>Any</option>
+                <option *ngFor="let faculty of faculties; let i = index" [value]="faculty.id">
+                    {{faculty.title}}
+                </option>
+            </select>
+        </div>
+        <div class="col-3 text-left">
             <label for="groupSelect">Выберите группу</label>
-            <select class="form-control" id="groupSelect" [(ngModel)]="selectedGroup" (change)="onGroupSelect()"
-                name="selector" #groupSelect="ngModel">
-                <option *ngFor="let group of groups; let i = index" [value]="group.id">
+            <select class="form-control" id="groupSelect" [(ngModel)]="selectedGroup" (ngModelChange)="onGroupSelect()"
+                name="groupSelector" #groupSelect="ngModel">
+                <option *ngFor="let group of groupsArray; let i = index" [value]="group.id">
                     {{group.title}}
                 </option>
             </select>
         </div>
     </div>
-    <div class="table">
+    <div class="table1">
         <div id="time">
             <div *ngFor="let time of lessonsTime; let i = index">
                 <span>{{lessonsTime[i]}}</span>
@@ -32,16 +42,16 @@
                 <div class="lesson" *ngFor=" let lesson of cell.cells; let lessonIndex=index">
                     <app-lesson class="inner-lesson" [lesson]="lesson"></app-lesson>
                 </div>
-                <button type="button" data-toggle="modal" data-target="#createModal" *ngIf="isAdmin"
-                    class="lesson text-center new-lesson" (click)="addLesson()"><i
-                        class="material-icons">add_circle_outline</i></button>
+                <div data-toggle="modal" data-target="#createModal" *ngIf="isAdmin"
+                    class="lesson text-center new-lesson" (click)="addLesson(lineIndex, cellIndex)"><i
+                        class="material-icons">add_circle_outline</i></div>
                 <div class="modal fade" id="createModal" tabindex="-1" role="dialog"
                     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="exampleModalLongTitle">Создание пары</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                                <button type="button" class="close" #closebutton data-dismiss="modal" aria-label="Close"
                                     (click)="createForm.reset();">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
@@ -56,7 +66,7 @@
                                             name="audienceSelector" #audienceSelect="ngModel" selected required>
                                             <option *ngFor="let audience of audiences; let i = index"
                                                 [value]="audience.id">
-                                                {{audience.title}}
+                                                {{audience.audienceNumber}}
                                             </option>
                                         </select>
                                         <div
@@ -66,18 +76,47 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!--Group-->
-                                    <div class="form-group">
-                                        <label for="groupSelect">Группа</label>
-                                        <select class="form-control" id="groupSelect" [(ngModel)]="selectedGroup"
-                                            name="groupSelector" #groupSelect="ngModel" selected required>
-                                            <option *ngFor="let group of groups; let i = index" [value]="group.id">
-                                                {{group.title}}
-                                            </option>
-                                        </select>
-                                        <div *ngIf="groupSelect.errors && (groupSelect.dirty || groupSelect.touched)">
-                                            <div [hidden]="!groupSelect.errors.required">
-                                                <p style="color:brown">Нужно выбрать группу!</p>
+                                    <!--Faculty-->
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="form-group">
+                                                <label for="facultySelect">Факультет</label>
+                                                <select class="form-control" id="facultySelect"
+                                                    [(ngModel)]="selectedModalFaculty" name="facultySelector"
+                                                    #facultySelect1="ngModel" (change)="onModalFacultySelect()"
+                                                    selected>
+                                                    <option selected>Any</option>
+                                                    <option *ngFor="let faculty of faculties; let i = index"
+                                                        [value]="faculty.id">
+                                                        {{faculty.title}}
+                                                    </option>
+                                                </select>
+                                                <div
+                                                    *ngIf="facultySelect1.errors && (facultySelect1.dirty || facultySelect1.touched)">
+                                                    <div [hidden]="!facultySelect1.errors.required">
+                                                        <p style="color:brown">Нужно выбрать факультет!</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!--Group-->
+                                        <div class="col-6">
+                                            <div class="form-group">
+                                                <label for="groupSelect">Группа</label>
+                                                <select class="form-control" id="groupSelect"
+                                                    [(ngModel)]="selectedModalGroup" name="groupSelector"
+                                                    #groupSelect1="ngModel" selected required>
+                                                    <option *ngFor="let group of groupsArray; let i = index"
+                                                        [value]="group.id">
+                                                        {{group.title}}
+                                                    </option>
+                                                </select>
+                                                <div
+                                                    *ngIf="groupSelect1.errors && (groupSelect1.dirty || groupSelect1.touched)">
+                                                    <div [hidden]="!groupSelect1.errors.required">
+                                                        <p style="color:brown">Нужно выбрать группу!</p>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -85,7 +124,8 @@
                                     <div class="form-group">
                                         <label for="teacherSelect">Преподаватель</label>
                                         <select class="form-control" id="teacherSelect" [(ngModel)]="selectedTeacher"
-                                            name="teacherSelector" #teacherSelect="ngModel" selected required>
+                                            name="teacherSelector" #teacherSelect="ngModel" (change)="onTeacherChange()"
+                                            selected required>
                                             <option *ngFor="let teacher of teachers; let i = index"
                                                 [value]="teacher.id">
                                                 {{teacher.name}} {{teacher.surname}} {{teacher.patronymic}}
@@ -123,8 +163,7 @@
                                             #lessonTypeSelect="ngModel" selected required>
                                             <option *ngFor="let lessonType of lessonTypes; let i = index"
                                                 [value]="lessonType.id">
-                                                {{lessonType.type}}<div class="w-100 h-100 d-inline-block"
-                                                    [style.background-color]="lessonType.color"></div>
+                                                <p [style.color]="lessonType.color">{{lessonType.type}}</p>
                                             </option>
                                         </select>
                                         <div
@@ -134,27 +173,41 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!--Subject-->
-                                    <div class="form-group">
-                                        <label for="subjectSelect">Предмет</label>
-                                        <select class="form-control" id="subjectSelect" [(ngModel)]="selectedSubject"
-                                            name="subjectSelector" #subjectSelect="ngModel" selected required>
-                                            <option *ngFor="let subject of subjects; let i = index"
-                                                [value]="subject.id">
-                                                {{subject.title}}
-                                            </option>
-                                        </select>
-                                        <div
-                                            *ngIf="subjectSelect.errors && (subjectSelect.dirty || subjectSelect.touched)">
-                                            <div [hidden]="!subjectSelect.errors.required">
-                                                <p style="color:brown">Нужно выбрать предмет!</p>
+                                    <div class="row">
+                                        <!--Week start-->
+                                        <div class="col-6">
+                                            <div class="form-group">
+                                                <label for="weekStartInput">Неделя начала</label>
+                                                <input type="number" min="1" max="60" [(ngModel)]="weekStart"
+                                                    class="form-control" name="weekStartInput" id="weekStartInput"
+                                                    placeholder="Enter start of week" #weekStartInput="ngModel"
+                                                    required>
+                                                <div
+                                                    *ngIf="weekStartInput.errors && (weekStartInput.dirty || weekStartInput.touched)">
+                                                    <div [hidden]="!weekStartInput.errors.required">
+                                                        <p class="m-1" style="color:brown">Поле начала недели -
+                                                            обязательное!
+                                                        </p>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <!--Week start-->
-                                    <div class="form-group">
-                                        <label for="subjectSelect">Неделя начала</label>
-
+                                        <!--Week end-->
+                                        <div class="col-6">
+                                            <div class="form-group">
+                                                <label for="weekEndInput">Неделя конца</label>
+                                                <input type="number" min="1" max="60" [(ngModel)]="weekEnd"
+                                                    class="form-control" name="weekEndInput" id="weekEndInput"
+                                                    placeholder="Enter end of week" #weekEndInput="ngModel" required>
+                                                <div
+                                                    *ngIf="weekEndInput.errors && (weekEndInput.dirty || weekEndInput.touched)">
+                                                    <div [hidden]="!weekEndInput.errors.required">
+                                                        <p class="m-1" style="color:brown">Поле конца недели -
+                                                            обязательное!</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal"
@@ -175,3 +228,26 @@
             </div>
         </div>
     </div>
+    <!-- <table class="table table-bordered table-bg mt-5">
+        <thead>
+            <tr>
+                <th scope="col"></th>
+                <th *ngFor="let time of lessonsTime; let i = index" scope="col">{{lessonsTime[i]}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let weekLine of schedule; let lineIndex = index">
+                <th scope="row">{{weekNames[lineIndex]}}</th>
+                <td *ngFor="let cell of weekLine.weekLines; let cellIndex=index">
+                    <div class="lesson" *ngFor=" let lesson of cell.cells; let lessonIndex=index">
+                        <app-lesson class="inner-lesson" [lesson]="lesson"></app-lesson>
+                    </div>
+                    <div data-toggle="modal" data-target="#createModal" *ngIf="isAdmin"
+                        class="lesson text-center new-lesson" (click)="addLesson()">
+                        <i class="material-icons">add_circle_outline</i>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table> -->
+</div>
