--- a/src/app/schedule/schedule.component.scss
+++ b/src/app/schedule/schedule.component.scss
@@ -1,10 +1,10 @@
 .page-wrapper {
-  width: 920px;
+  width: 1280px;
   height: auto;
   margin: 0 auto;
 }
 
-.table {
+.table1 {
   height: 100%;
   width: 100%;
   background-color: #7c9ddb;
@@ -25,6 +25,7 @@
   text-align: center;
   justify-content: center;
   margin-right: 2px;
+  /////width: 120px;
   width: 120px;
   font-weight: bold;
 }
@@ -67,7 +68,7 @@
   flex-direction: column;
   justify-content: stretch;
   flex: 1;
-  width: 120px;
+  width: 100%;
   margin-right: 2px;
   border-radius: 2px;
   position: relative;
@@ -79,11 +80,12 @@
 .lesson {
   display: flex;
   flex: 1;
-  width: 124px;
+  width: 100%;
   flex-direction: column;
   background-color: #ffffff;
   justify-content: center;
   height: 100%;
+  ////margin-bottom: 2px;
   margin-bottom: 2px;
 }
 
@@ -127,3 +129,37 @@ p {
     cursor: pointer;
   }
 }
+
+// //2nd table
+// .table-bg {
+//   background-color: #7c9ddb;
+// }
+
+// .flex-wrapper {
+//   flex-direction: column;
+//   justify-content: stretch;
+//   flex: 1;
+//   position: relative;
+// }
+
+// td {
+//   background-color: #fff;
+// }
+
+// tr {
+//   height: 100%;
+// }
+// tr,
+// th,
+// thead,
+// td,
+// tbody,
+// table {
+//   border: 3px solid #7c9ddb !important;
+//   padding: 0 !important;
+// }
+
+// th {
+//   color: #fff;
+//   text-align: center;
+// }
