--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,8 +46,8 @@ ul {
 }
 
 .cont {
-  max-width: 1100px;
+  max-width: 1280px;
   margin: auto;
-  overflow: hidden;
+  //overflow: hidden;
   padding: 0 2rem;
 }
